--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <script src="./scripts/apps/app.js"></script>
 <script src="./scripts/lexpar.js"></script>
 <script src="./scripts/commands/command_base.js"></script>
+<script src="./scripts/command_registry.js"></script>
 <script src="./scripts/commexec.js"></script>
 <script src="./scripts/commands/registry.js"></script>
 <script src="./scripts/main.js"></script>
