--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-    <h1 id="main-footer">| COPYRIGHT ©2025 | <a href="mailto:oopismcgoopis@gmail.com">EDMARK</a> & <a href="https://gemini.google.com">GEMINI</a> | <a target="_blank" href="https://github.com/aedmark/oopis-os-4.5">GIT</a> | <a target="_blank" href="https://oopisos.com">HOME</a> | <a target="_blank" href="https://raw.githubusercontent.com/aedmark/Oopis-OS-4.5/refs/heads/main/docs/guide.md">GUIDE</a> |</h1>
+    <h1 id="main-footer">| COPYRIGHT ©2025 | <a href="mailto:oopismcgoopis@gmail.com">EDMARK</a> & <a href="https://gemini.google.com">GEMINI</a> | <a target="_blank" href="https://github.com/aedmark/oopisos-pocket">GIT</a> | <a target="_blank" href="https://oopisos.com">HOME</a> | <a target="_blank" href="https://raw.githubusercontent.com/aedmark/OopisOS-Pocket/refs/heads/main/docs/guide.md">GUIDE</a> |</h1>
   </div>
 </div>
 
