--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>OopisOS v4.6</title>
   <script src="marked.min.js"></script>
   <script src="purify.min.js"></script>
+  <script src="tone.js"></script>
   <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="./scripts/apps/explorer/explorer.css">
   <link rel="stylesheet" href="./scripts/apps/editor/editor.css">
