--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <script src="./scripts/session_manager.js"></script>
 <script src="./scripts/terminal_ui.js"></script>
 <script src="./scripts/modal_manager.js"></script>
+<script src="./scripts/sound_manager.js"></script>
 <script src="./scripts/message_bus_manager.js"></script>
 <script src="./scripts/apps/app.js"></script>
 <script src="./scripts/lexpar.js"></script>
