--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <script src="./scripts/commands/command_base.js"></script>
 <script src="./scripts/command_registry.js"></script>
 <script src="./scripts/commexec.js"></script>
+<script src="./scripts/storage_hal.js"></script>
 <script src="./scripts/main.js"></script>
 
 </body>
