--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="./scripts/apps/log/log.css">
   <link rel="stylesheet" href="./scripts/apps/paint/paint.css">
   <link rel="stylesheet" href="./scripts/apps/basic/basic.css">
+  <link rel="stylesheet" href="./scripts/apps/synth/synth.css">
 </head>
 <body>
 
