--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="./scripts/apps/paint/paint.css">
   <link rel="stylesheet" href="./scripts/apps/basic/basic.css">
   <link rel="stylesheet" href="./scripts/apps/synth/synth.css">
+  <link rel="stylesheet" href="./scripts/apps/top/top.css">
+
 </head>
 <body>
 
