--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="marked.min.js"></script>
   <script src="purify.min.js"></script>
   <script src="tone.js"></script>
+  <script src="midi.js"></script>
   <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="./scripts/apps/explorer/explorer.css">
   <link rel="stylesheet" href="./scripts/apps/editor/editor.css">
