--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <script src="./scripts/command_registry.js"></script>
 <script src="./scripts/commexec.js"></script>
 <script src="./scripts/storage_hal.js"></script>
+<script src="./scripts/network_manager.js"></script>
 <script src="./scripts/main.js"></script>
 
 </body>
