--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="purify.min.js"></script>
   <script src="tone.js"></script>
   <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./scripts/apps/apps.css">
   <link rel="stylesheet" href="./scripts/apps/explorer/explorer.css">
   <link rel="stylesheet" href="./scripts/apps/editor/editor.css">
   <link rel="stylesheet" href="./scripts/apps/chidi/chidi.css">
